dockerki/dockerki-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockerki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dockerki
  template:
    metadata:
      labels:
        app: dockerki
    spec:
      containers:
        - name: dockerki
          image: docker/welcome-to-docker:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dockerki
spec:
  selector:
    app: dockerki
  ports:
    - port: 80
      targetPort: 80
